# Modera-Dental-Agent

./: .dockerignore  .env.local.example  .gitignore  DEPLOY_GCP.md  Dockerfile  README.md  agent.py  appointment_confirmation.html  appointment_rescheduled.html  docker-compose.yml  prompt.md  pyproject.toml  redeploy.sh
.agent/workflows/: deploy-gcp.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/booking/: route.ts
frontend/src/app/api/token/: route.ts
frontend/src/components/: AgentModal.tsx  BookingModal.tsx  Orb.tsx
marketing/: hn_post_draft.md  linkedin_post_draft.md  twitter_post_draft.md
